--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -3,7 +3,7 @@
   <head>
     <title></title>
     <meta charset="UTF-8">
-    <link href='css/style.css' rel='stylesheet' type='text/css'>  
+    <script src='script.js'></script>
   </head>
 
   <body>
