Terminando el ejercicio 3

--- a/ejercicio3/index.html
+++ b/ejercicio3/index.html
@@ -7,11 +7,8 @@
   </head>
 
   <body>
-    <form id="markupForm">
-      <h2>Ingrese el texto</h2>
-      <textarea id="markupText" rows="10" cols="50"></textarea>
-      <input type="submit">
-    </form>
+    <div id="htmlCode">  
+    </div>
   </body>
 </html>
 
